# data-science-app

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
docs/tauri_commands/: DATABASE_TAURI_COMMANDS.md  DATA_ANALYSIS_TAURI_COMMANDS.md
src/: app.css  app.html  store.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/config/: config.json
src-tauri/config/config/default/: ORG_config.json
src-tauri/config/config/dual_mode/: dual_mode_person_equipment.json  dual_mode_tracking_config.json
src-tauri/config/config/person_equipment_module/: OGG_openvino.json  ORG_config.json  visual_style_config.json
src-tauri/config/config/safety_ai_ogg/: hierarchical_config.json  person_equipment_segment_config.json  primary_model_tracking_example.json  safety_ai_dual_mode_person_equipment.json
src-tauri/config/config/safety_ai_pipeline/: ORG_config_full.json  ORSG_config.json
src-tauri/config/config/simple/: simple_inference_config.json  simple_unified_config.json
src-tauri/config/config/unified/: unified_config_example.json
src-tauri/config/default/: 001_dag_template.json  Event_config.json  OGG_config.json  ORG_config.json  ORSG_config.json  Stream_config.json  dag_template.json
src-tauri/config/default_deprecated/: ORSG_config.json  Stream_config.json  event_config.json
src-tauri/config/dual_mode/: dual_mode_debug_config.json  dual_mode_pose_person_equipment.json  dual_mode_unified_config.json
src-tauri/config/person_equipment_module/: safety_ai_config.json  yolo_person_equipment_OGG.json
src-tauri/config/safety_ai_ogg/: hierarchical_person_segmentation_config.json  per_model_tracking_example.json  safety_ai_detect.json  safety_ai_dual_mode_pose_person_equipment.json  safety_ai_pose.json  safety_ai_segment.json
src-tauri/config/safety_ai_pipeline/: ORG_config.json
src-tauri/config/safety_ai_tracker/: safety_ai_dual_mode_pose_person_equipment.json
src-tauri/config/simple/: simple_pose_config.json  simple_segmentation_config.json
src-tauri/config/unified/: unified_pose.json  unified_segment.json
src-tauri/config/unified/unified_tracker/: unified_detect_tracker.json  unified_pose_tracker.json  unified_segment_tracker.json
src-tauri/crates/data-science/: Cargo.toml
src-tauri/crates/data-science/src/: analysis.rs  export.rs  lib.rs  parser.rs  storage.rs  types.rs  utils.rs
src-tauri/crates/database-surrealdb/: Cargo.toml
src-tauri/crates/database-surrealdb/src/: demo.rs  global.rs  lib.rs  main.rs  manager.rs  models.rs
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/data_science/: commands.rs  mod.rs
src-tauri/src/database_commands/: commands.rs
src/lib/: template_dag.json
src/lib/components/: Sidebar.svelte
src/lib/services/: ConfigAPI.ts  EventConfigService.ts  ORGConfigService.ts  ORSGConfigService.ts  OggConfigService.ts  StreamConfigService.ts
src/lib/styles/: glass.css
src/lib/utils/: formatters.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/data-visualization/: +page.svelte
src/types/: tauri.d.ts
(+18 files in other folders)
