[package]
name = "data-science"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"
chardetng = "0.1"
lazy_static = "1.4"

[features]
default = []
