[package]
name = "database-surrealdb"
version = "0.1.0"
edition = "2024"
description = "Database crate with SurrealDB demonstration"

[[bin]]
name = "database_demo"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
# surrealdb = { version = "2.3.7", features = ["kv-rocksdb"] }
surrealdb = { workspace = true }
anyhow = "1.0"
tempfile = "3.13.0"
chrono = "0.4.39"
